--- a/site/index.html
+++ b/site/index.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Module2</title>
-	<link rel="external" href="external.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
-	
-	<h1>Our Menu</h1>
+    <h1>Our Menu</h1>
+    <div class="box">
+        <div class=" text">
+            Chicken
+        </div>
+        <div id="contain"><br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos ex, error non provident nisi fugiat nostrum vero labore illo sapiente facilis nobis itaque. Facilis soluta quisquam minus fugit blanditiis? Cum!
 
-	<div class="box1">
-		<div class="b1">
-		</div>
-	</div>
+        </div>
 
+        
+    </div>
+    <div class="box">
+        <div class="text ">
+            Beast
+        </div>
+        <div id="contain"><br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos ex, error non provident nisi fugiat nostrum vero labore illo sapiente facilis nobis itaque. Facilis soluta quisquam minus fugit blanditiis? Cum!
+
+        </div>
+</div>
+<div class="box1 box">
+    <div class="text ">
+        Shushi
+    </div>
+    <div id="contain"><br>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quos ex, error non provident nisi fugiat nostrum vero labore illo sapiente facilis nobis itaque. Facilis soluta quisquam minus fugit blanditiis? Cum!
+
+    </div>
+
+    
+</div>
+   
+   
+   
 </body>
 </html>
